# P6H_Project

./: CMakeLists.txt  lwipopts.h
include/: lwipopts.h
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/include/: util.h
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/: sd_card.h
lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SPI/: sd_spi.h  spi.c
src/: CMakeLists.txt  lwipopts.h  main copy.c  main.c  main1.c  main2.c  old.c
src/buddy1/: hw_config.c  sd_card.c  sd_card.h
src/buddy2/: digital.c  old_CMakeLists.txt  pwm.h  pwm_adc.c  signal_analyzer.c  signal_analyzer.h  test.c  test.h
src/buddy3/: automate.c  automate.h  digital_comms.c  digital_comms.h  protocol_analyzer.c  protocol_analyzer.h  signal_generator.c  signal_generator.h  test.c  test.h  uart.c
src/buddy3/i2c/: i2c.c  i2c.h
src/buddy3/uart/: uart.c  uart.h
src/buddy4/: swd.c
src/buddy5/: ntp.c  wifi.c  wifi.h  wifi_old.h
station2/: CMakeLists.txt  lwipopts.h  main2.c  station2.c
station2/buddy1/: hw_config.c  sd_card.c  sd_card.h
station2/buddy2/: adc.c  adc.h  digital.c  digital.h  pwm.c  pwm.h  signal_analyzer.c  signal_analyzer.h
station2/buddy3/: protocol_analyzer.c  protocol_analyzer.h  signal_generator.c  uart.c  uart.h
station2/buddy4/: swd.h
station2/buddy5/: CMakeLists.txt  dashboard.c  dashboard.h  index.html  ntp.c  ntp.h  wifi_dashboard.c  wifi_dashboard.h  z_ping.c
station2/buddy5/dnsserver/: dnsserver.c
test_pico/: CMakeLists.txt  README.md
test_pico/include/: FreeRTOSConfig.h
test_pico/src/: CMakeLists.txt  main.c
test_pico/z_ping/: CMakeLists.txt  z_ping.c
